loco-gen/tests/templates/snapshots/inject[dtos_mod_rs]@Api_scaffold.snap
---
source: loco-gen/tests/templates/scaffold.rs
expression: "fs::read_to_string(dtos_path.join(\"mod.rs\")).expect(\"mod.rs injection failed\")"
---

pub mod posts;
